# cyberdeck_tui

./: .rustc_info.json  Cargo.nix  Cargo.toml  LICENSE  README.md  deploy.sh  shell.nix
debug/.fingerprint/allocator-api2-302c8aaff85fe901/: lib-allocator_api2  lib-allocator_api2.json
debug/.fingerprint/arrayvec-a2b5b1cd6af46bc5/: lib-arrayvec  lib-arrayvec.json
debug/.fingerprint/autocfg-3b49e0afa777d415/: lib-autocfg  lib-autocfg.json
debug/.fingerprint/bitcoin-internals-0787371769977176/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/bitcoin-internals-53724684f7adc4f7/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/bitcoin-io-344f038bfeee2f7b/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/bitcoin-io-4a30bb77861be139/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/bitcoin-io-c94f121c99a3967b/: lib-bitcoin_io  lib-bitcoin_io.json
debug/.fingerprint/bitflags-2693e7bb8c9051eb/: lib-bitflags  lib-bitflags.json
debug/.fingerprint/bitflags-70d45624af9c1b08/: lib-bitflags  lib-bitflags.json
debug/.fingerprint/cc-294748733d6d3a4d/: lib-cc  (+1 more)
src/: app.rs  app_actions.rs  audio_player.rs  blt_client.rs  config.rs  device.rs  event.rs  fatal.rs  flow.mmd  logging.rs  machine.rs  main.rs  main_menu.rs  menu.rs  menus.rs  playlist.rs  track.rs  track_widget.rs  ui.rs
src/menus/: blt_menu.rs  log_menu.rs  main_menu.rs  menu.rs  mfrc522_menu.rs  mod.rs  playlist_collection_menu.rs  playlist_menu.rs  quick_menu.rs
src/widgets/: mod.rs  playlist_widget.rs  quick_widget.rs
(+156 files in other folders)
