[package]
name = "cyberdeck_tui"
version = "0.1.0"
description = "Portable cyberdeck tui!"
authors = ["Rayla-rs <wassrayla@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
whoami = "1.6.0"
chrono = "0.4.41"
rodio = "0.21.1"
bluer = { version = "0.17.4", features = ["full"] }
bluetui = "0.6.0"
toml = "0.9.2"
serde = { version ="1.0.219", features = ["derive"] }
dirs = "6.0.0"
audiotags = "0.5.0"
